Refine warnings and UI stability